--- a/schedule/angular.json
+++ b/schedule/angular.json
@@ -68,7 +68,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "schedule:build"
+            "browserTarget": "schedule:build",
+            "disableHostCheck": true
           },
           "configurations": {
             "production": {
