--- a/schedule/package.json
+++ b/schedule/package.json
@@ -19,8 +19,11 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@yunzhi/ng-mock-api": "0.0.5",
+    "bootstrap": "~4.6.0",
     "bootstrap-icons": "^1.10.3",
     "rxjs": "~6.6.0",
+    "sweetalert2": "^9.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
