--- a/api/pom.xml
+++ b/api/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>swagger-annotations</artifactId>
             <version>1.5.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-commons</artifactId>
+            <version>2.7.5</version>
+        </dependency>
     </dependencies>
 
 	<build>
