teacher delete search

--- a/schedule/package.json
+++ b/schedule/package.json
@@ -20,8 +20,10 @@
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
     "@yunzhi/ng-mock-api": "0.0.5",
-    "bootstrap": "^4.6.0",
+    "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.10.3",
+    "jquery": "^3.6.3",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
     "sweetalert2": "^9.4.0",
     "tslib": "^2.0.0",
