--- a/api/pom.xml
+++ b/api/pom.xml
@@ -32,7 +32,7 @@
 
 		<dependency>
 			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
+			<artifactId>mysql-connector-j</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -49,10 +49,6 @@
             <artifactId>spring-data-commons</artifactId>
             <version>2.7.5</version>
         </dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
     </dependencies>
 
 	<build>
