--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       hibernate:
         dialect: "org.hibernate.dialect.MySQL57Dialect"
     hibernate:
-      ddl-auto: "create-drop"
+      ddl-auto: "create"
 
   # 上传文件大小限制
   servlet:
