--- a/schedule/package.json
+++ b/schedule/package.json
@@ -22,6 +22,7 @@
     "@yunzhi/ng-mock-api": "0.0.5",
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.10.3",
+    "file-saver": "^2.0.5",
     "jquery": "^3.6.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
@@ -33,6 +34,7 @@
     "@angular-devkit/build-angular": "~0.1100.7",
     "@angular/cli": "~11.0.7",
     "@angular/compiler-cli": "~11.0.9",
+    "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
