--- a/api/pom.xml
+++ b/api/pom.xml
@@ -50,6 +50,16 @@
             <artifactId>spring-data-commons</artifactId>
             <version>2.7.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>4.1.2</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.validation</groupId>
+            <artifactId>validation-api</artifactId>
+            <version>2.0.1.Final</version>
+        </dependency>
     </dependencies>
 
 	<build>
