--- a/schedule/package.json
+++ b/schedule/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~11.0.9",
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "@yunzhi/ng-mock-api": "0.0.5",
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.10.3",
@@ -26,7 +27,7 @@
     "jquery": "^3.6.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
-    "sweetalert2": "^9.4.0",
+    "sweetalert2": "^9.17.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
