--- a/schedule/package.json
+++ b/schedule/package.json
@@ -27,6 +27,7 @@
     "jquery": "^3.6.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
+    "select2": "^4.1.0-rc.0",
     "sweetalert2": "^9.17.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -37,6 +38,7 @@
     "@angular/compiler-cli": "~11.0.9",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.6.0",
+    "@types/jquery": "^3.5.16",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
