--- a/schedule/package.json
+++ b/schedule/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
     "@fortawesome/fontawesome-free": "^5.15.4",
+    "@types/select2": "^4.0.56",
     "@yunzhi/ng-mock-api": "0.0.5",
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.10.3",
@@ -27,7 +28,6 @@
     "jquery": "^3.6.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
-    "select2": "^4.1.0-rc.0",
     "sweetalert2": "^9.17.4",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -38,7 +38,6 @@
     "@angular/compiler-cli": "~11.0.9",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.6.0",
-    "@types/jquery": "^3.5.16",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
