--- a/schedule/package.json
+++ b/schedule/package.json
@@ -20,12 +20,15 @@
     "@angular/platform-browser-dynamic": "~11.0.9",
     "@angular/router": "~11.0.9",
     "@fortawesome/fontawesome-free": "^5.15.4",
-    "@types/select2": "^4.0.56",
+    "@ng-select/ng-select": "^6.1.0",
     "@yunzhi/ng-mock-api": "0.0.5",
+    "@yunzhi/utils": "0.0.5",
+    "angular-ng-autocomplete": "^2.0.12",
     "bootstrap": "^4.6.2",
     "bootstrap-icons": "^1.10.3",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
+    "jasmine-marbles": "^0.9.2",
     "jquery": "^3.6.3",
     "popper.js": "^1.16.1",
     "rxjs": "~6.6.0",
