--- a/schedule/package.json
+++ b/schedule/package.json
@@ -38,7 +38,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.7",
-    "@angular/cli": "~11.0.7",
+    "@angular/cli": "^11.0.7",
     "@angular/compiler-cli": "~11.0.9",
     "@types/file-saver": "^2.0.5",
     "@types/jasmine": "~3.6.0",
