--- a/document/nginx.conf
+++ b/document/nginx.conf
@@ -7,7 +7,18 @@ server {
 			proxy_set_header Host $host;
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			 # 以下保证webscoket
+                    proxy_set_header Upgrade $http_upgrade;
+                    proxy_set_header Connection $connection_upgrade;
+                    proxy_http_version 1.1;
 	    }
+
+	    location /sockjs-node/ {
+                proxy_pass http://127.0.0.1:4200/sockjs-node/;
+                proxy_http_version 1.1;
+                proxy_set_header Upgrade $http_upgrade;
+                proxy_set_header Connection $connection_upgrade;
+            }
 
 	    location / {
 			proxy_pass http://127.0.0.1:4200;
@@ -15,11 +26,4 @@ server {
 			proxy_set_header X-Real-IP $remote_addr;
 			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 	    }
-
-	    location /ws {
-			proxy_pass http://127.0.0.1:4200;
-			proxy_http_version 1.1;
-			proxy_set_header Upgrade $http_upgrade;
-			proxy_set_header Connection "Upgrade";
-            }
 }
