--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -2,7 +2,7 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost:3310/schedule?useUnicode=true&characterEncoding=utf-8"
     username: "root"
-    password: ""
+    password: "root"
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     generate-ddl: true
