--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -11,9 +11,9 @@ spring:
       hibernate:
         dialect: "org.hibernate.dialect.MySQL57Dialect"
     hibernate:
-      ddl-auto: "validate"
+      ddl-auto: "create"
   flyway:
-    enabled: true
+    enabled: false
     baseline-on-migrate: true
 
 
