--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -8,7 +8,7 @@
 name: Maven test and install
 
 on:
-  pull_request:
+  [push, pull_request]
 
 jobs:
   spring-boot:
@@ -24,9 +24,7 @@ jobs:
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
-        java-version: 1.8
-    - name: Set up redis
-      uses: zhulik/redis-action@1.1.0    
+        java-version: 1.8 
     - name: Setup MySQL
       uses: mirromutth/mysql-action@v1.1
       with:
@@ -48,11 +46,12 @@ jobs:
       run: cat $GITHUB_EVENT_PATH
     - name: Build with Maven
       run: cd api && mvn install
+      
     - name: maven build success
       if: ${{ success() }}
       uses: fifsky/dingtalk-action@master
       with:
-        url: https://oapi.dingtalk.com/robot/send?access_token=aaa
+        url: https://oapi.dingtalk.com/robot/send?access_token=39f9e04938c553ab8609fd6eeac65ef11a28d2631fe27d1525edffbd3b5d9013
         type: markdown
         content: |
           # 💯👨‍💻 Success 🎉🎉🎉
@@ -61,7 +60,7 @@ jobs:
       if: ${{ failure() }}
       uses: fifsky/dingtalk-action@master
       with:
-        url: https://oapi.dingtalk.com/robot/send?access_token=aaa
+        url: https://oapi.dingtalk.com/robot/send?access_token=39f9e04938c553ab8609fd6eeac65ef11a28d2631fe27d1525edffbd3b5d9013
         type: markdown
         content: |
           # 💤🤷‍♀️ failure 💣💣
