--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,6 @@ on: [pull_request]
 jobs:
   angular:
     runs-on: ubuntu-latest
-    runs-on: ubuntu-20.04
 
     steps:
     - name: Cancel Previous Runs
@@ -52,7 +51,6 @@ jobs:
 
   springBoot:
     runs-on: ubuntu-latest
-    runs-on: ubuntu-20.04
     steps:
     - name: Cancel Previous Runs
       uses: styfle/cancel-workflow-action@0.7.0
@@ -94,7 +92,6 @@ jobs:
   notify:
 
     runs-on: ubuntu-latest
-    runs-on: ubuntu-20.04
     needs: [angular, springBoot]
     steps:
 
@@ -109,21 +106,21 @@ jobs:
         echo YZ_DESCRIPTION=$(jq --raw-output .repository.description "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
         echo YZ_HTML_URL=$(jq --raw-output .repository.html_url "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
         
-#     - name: angular build failure
-#       if: ${{ failure() }}
-#       uses: fifsky/dingtalk-action@master
-#       with:
-#         url: https://oapi.dingtalk.com/robot/send?access_token=39f9e04938c553ab8609fd6eeac65ef11a28d2631fe27d1525edffbd3b5d9013
-#         type: markdown
-#         content: |
-#           # 💤🤷‍♀️  Failure 💣💣💣
-#           > Angular Build of [#${{ env.PR_NUMBER }} ${{ env.PR_TITLE }}](${{ env.PR_URL }}) of [${{ env.YZ_DESCRIPTION }}](${{ env.YZ_HTML_URL }}) by ${{ env.PR_USER }} failure
-#     - name: angular build success 
-#       if: ${{ success() }}
-#       uses: fifsky/dingtalk-action@master
-#       with:
-#         url: https://oapi.dingtalk.com/robot/send?access_token=39f9e04938c553ab8609fd6eeac65ef11a28d2631fe27d1525edffbd3b5d9013
-#         type: markdown
-#         content: |
-#           # 💯👨‍💻  Success 🎈🎈🎈
-#           > Angular Build [#${{ env.PR_NUMBER }} ${{ env.PR_TITLE }}](${{ env.PR_URL }}) of [${{ env.YZ_DESCRIPTION }}](${{ env.YZ_HTML_URL }}) by ${{ env.PR_USER }} success
+    - name: angular build failure
+      if: ${{ failure() }}
+      uses: fifsky/dingtalk-action@master
+      with:
+        url: https://oapi.dingtalk.com/robot/send?access_token=39f9e04938c553ab8609fd6eeac65ef11a28d2631fe27d1525edffbd3b5d9013
+        type: markdown
+        content: |
+          # 💤🤷‍♀️  Failure 💣💣💣
+          > Angular Build of [#${{ env.PR_NUMBER }} ${{ env.PR_TITLE }}](${{ env.PR_URL }}) of [${{ env.YZ_DESCRIPTION }}](${{ env.YZ_HTML_URL }}) by ${{ env.PR_USER }} failure
+    - name: angular build success 
+      if: ${{ success() }}
+      uses: fifsky/dingtalk-action@master
+      with:
+        url: https://oapi.dingtalk.com/robot/send?access_token=39f9e04938c553ab8609fd6eeac65ef11a28d2631fe27d1525edffbd3b5d9013
+        type: markdown
+        content: |
+          # 💯👨‍💻  Success 🎈🎈🎈
+          > Angular Build [#${{ env.PR_NUMBER }} ${{ env.PR_TITLE }}](${{ env.PR_URL }}) of [${{ env.YZ_DESCRIPTION }}](${{ env.YZ_HTML_URL }}) by ${{ env.PR_USER }} success
