--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: "jdbc:mysql://localhost:3310/schedule?useUnicode=true&characterEncoding=utf-8"
+    url: "jdbc:mysql://localhost:3310/schedule?useUnicode=true&characterEncoding=utf-8&useSSL=false"
     username: "root"
     password: "root"
     driver-class-name: com.mysql.cj.jdbc.Driver
