--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ on: [push, pull_request]
 
 jobs:
   angular:
-    runs-on: ubuntu-latest 
+    runs-on: ubuntu-22.04
 
     steps:
     - name: Cancel Previous Runs
@@ -50,7 +50,7 @@ jobs:
       run: cd ${{ env.PROJECT_NAME }} && node_modules/@angular/cli/bin/ng build --prod
 
   springBoot:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Cancel Previous Runs
       uses: styfle/cancel-workflow-action@0.7.0
