--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -60,6 +60,11 @@ jobs:
     - name: checkout
       uses: actions/checkout@v3
       
+    - name: build mysql
+      run: |
+          docker pull mysql:5.7
+          docker run -p 3310:3306 -e MYSQL_ROOT_PASSWORD=root -e MYSQL_DATABASE=schedule -d mysql:5.7 --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
+      
     - name: Set up JDK 1.8
       uses: actions/setup-java@v3.0.0
       with:
@@ -67,17 +72,17 @@ jobs:
         distribution: ${{ env.DISTRIBUTION }}
         cache: 'maven'
       
-    - name: Setup MySQL
-      uses: mirromutth/mysql-action@v1.1
-      with:
-        host port: 3310 # Optional, default value is 3306. The port of host
-        container port: 3306 # Optional, default value is 3306. The port of container
-        character set server: 'utf8mb4'
-        collation server: 'utf8_general_ci'
-        mysql version: 5.7
-        mysql database: schedule
-        mysql user: root
-        mysql password: root
+#     - name: Setup MySQL
+#       uses: mirromutth/mysql-action@v1.1
+#       with:
+#         host port: 3310 # Optional, default value is 3306. The port of host
+#         container port: 3306 # Optional, default value is 3306. The port of container
+#         character set server: 'utf8mb4'
+#         collation server: 'utf8_general_ci'
+#         mysql version: 5.7
+#         mysql database: schedule
+#         mysql user: root
+#         mysql password: root
         
     - name: print env
       run: printenv
@@ -86,7 +91,7 @@ jobs:
       run: cat $GITHUB_EVENT_PATH
       
     - name: Build with Maven
-      run: cd api && mvn --batch-mode --update-snapshots package
+      run: cd api && mvn install
     
 
   notify:
