--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,46 +8,46 @@ env:
 on: [push, pull_request]
 
 jobs:
-  angular:
-    runs-on: ubuntu-22.04
+#   angular:
+#     runs-on: ubuntu-22.04
 
-    steps:
-    - name: Cancel Previous Runs
-      uses: styfle/cancel-workflow-action@0.11.0
-      with:
-        access_token: ${{ github.token }}
+#     steps:
+#     - name: Cancel Previous Runs
+#       uses: styfle/cancel-workflow-action@0.11.0
+#       with:
+#         access_token: ${{ github.token }}
         
-    - name: checkout
-      uses: actions/checkout@v3
+#     - name: checkout
+#       uses: actions/checkout@v3
     
-    - name: Setup Node.js environment
-      uses: actions/setup-node@v3.5.1
-      with: 
-        node-version: ${{ env.NODE_VERSION }}
-        cache: npm
-        cache-dependency-path: schedule/package.json
+#     - name: Setup Node.js environment
+#       uses: actions/setup-node@v3.5.1
+#       with: 
+#         node-version: ${{ env.NODE_VERSION }}
+#         cache: npm
+#         cache-dependency-path: schedule/package.json
     
     
         
-    - name: print env 
-      run: printenv
+#     - name: print env 
+#       run: printenv
       
-    - name: npm install
-      run: |
-        cd ${{ env.PROJECT_NAME }}
-        npm install --no-optional  --no-package-lock
-        node_modules/@angular/cli/bin/ng --version
+#     - name: npm install
+#       run: |
+#         cd ${{ env.PROJECT_NAME }}
+#         npm install --no-optional  --no-package-lock
+#         node_modules/@angular/cli/bin/ng --version
         
-    - name: ng lint
-      run: |
-        cd ${{ env.PROJECT_NAME }} 
-        node_modules/@angular/cli/bin/ng lint
+#     - name: ng lint
+#       run: |
+#         cd ${{ env.PROJECT_NAME }} 
+#         node_modules/@angular/cli/bin/ng lint
       
-    - name: ng test
-      run: cd ${{ env.PROJECT_NAME }} && node_modules/@angular/cli/bin/ng test --watch=false --browsers=ChromeHeadless --sourceMap=false    
+#     - name: ng test
+#       run: cd ${{ env.PROJECT_NAME }} && node_modules/@angular/cli/bin/ng test --watch=false --browsers=ChromeHeadless --sourceMap=false    
       
-    - name: ng build
-      run: cd ${{ env.PROJECT_NAME }} && node_modules/@angular/cli/bin/ng build --prod
+#     - name: ng build
+#       run: cd ${{ env.PROJECT_NAME }} && node_modules/@angular/cli/bin/ng build --prod
 
   springBoot:
     runs-on: ubuntu-22.04
@@ -94,38 +94,38 @@ jobs:
       run: cd api && mvn install
     
 
-  notify:
-
+  dingding-error: 
     runs-on: ubuntu-latest
-    needs: [angular, springBoot]
+    needs: [springBoot]
+    if: ${{ failure() }}
     steps:
-
-    - name: set PR_NUMBER
-      if: ${{ always() }}
-      run: |
-        cd api
-        echo PR_NUMBER=$(echo $GITHUB_REF | awk 'BEGIN { FS = "/" } ; { print $3 }') >> $GITHUB_ENV
-        echo PR_TITLE=$(jq --raw-output .pull_request.title "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
-        echo PR_URL=$(jq --raw-output .pull_request._links.html.href "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
-        echo PR_USER=$(jq --raw-output .pull_request.user.login "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
-        echo YZ_DESCRIPTION=$(jq --raw-output .repository.description "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
-        echo YZ_HTML_URL=$(jq --raw-output .repository.html_url "$GITHUB_EVENT_PATH") >> $GITHUB_ENV
-        
-    - name: angular build failure
-      if: ${{ failure() }}
-      uses: fifsky/dingtalk-action@master
-      with:
-        url: https://oapi.dingtalk.com/robot/send?access_token=39f9e04938c553ab8609fd6eeac65ef11a28d2631fe27d1525edffbd3b5d9013
-        type: markdown
-        content: |
-          # 💤🤷‍♀️  Failure 💣💣💣
-          > Angular Build of [#${{ env.PR_NUMBER }} ${{ env.PR_TITLE }}](${{ env.PR_URL }}) of [${{ env.YZ_DESCRIPTION }}](${{ env.YZ_HTML_URL }}) by ${{ env.PR_USER }} failure
-    - name: angular build success 
-      if: ${{ success() }}
-      uses: fifsky/dingtalk-action@master
-      with:
-        url: https://oapi.dingtalk.com/robot/send?access_token=39f9e04938c553ab8609fd6eeac65ef11a28d2631fe27d1525edffbd3b5d9013
-        type: markdown
-        content: |
-          # 💯👨‍💻  Success 🎈🎈🎈
-          > Angular Build [#${{ env.PR_NUMBER }} ${{ env.PR_TITLE }}](${{ env.PR_URL }}) of [${{ env.YZ_DESCRIPTION }}](${{ env.YZ_HTML_URL }}) by ${{ env.PR_USER }} success
+      - name: Send dingding notify error
+        uses: zcong1993/actions-ding@master
+        with:
+          dingToken: 7d56babc98796f14d3c95ecf62d3da5ddf1e56ddafed8ba4a692bd866890fbf8
+          secret: SEC43bb57e106c9f83a314aca8dda1f40d8e032ff1a5a5ece8b8e7327fc1c0310e3
+          body: |
+            {
+              "msgtype": "text",
+              "text": {
+                  "content": '[打叉][打叉][打叉]  执行失败\n提交者: ${{ github.triggering_actor }}\n任务: ${{ github.event.pull_request.title }}\n${{ github.ref_type }}: ${{ github.head_ref }}\n${{ github.event_name }}: ${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.number }}'
+              }
+            }
+      
+  dingding-success: 
+    runs-on: ubuntu-latest
+    needs: [springBoot]
+    if: ${{ success() }}
+    steps:
+      - name: Send dingding notify success
+        uses: zcong1993/actions-ding@master
+        with:
+          dingToken: 7d56babc98796f14d3c95ecf62d3da5ddf1e56ddafed8ba4a692bd866890fbf8
+          secret: SEC43bb57e106c9f83a314aca8dda1f40d8e032ff1a5a5ece8b8e7327fc1c0310e3
+          body: |
+            {
+              "msgtype": "text",
+              "text": {
+                  "content": '[微笑][微笑][微笑] 前台未测试 执行成功\n提交者: ${{ github.triggering_actor }}\n任务: ${{ github.event.pull_request.title }}\n${{ github.ref_type }}: ${{ github.head_ref }}\n${{ github.event_name }}: ${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.number }}'
+              }
+            } 
