--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -93,38 +93,38 @@ jobs:
       run: cd api && mvn install
     
 
-#   dingding-error: 
-#     runs-on: ubuntu-latest
-#     needs: [springBoot]
-#     if: ${{ failure() }}
-#     steps:
-#       - name: Send dingding notify error
-#         uses: zcong1993/actions-ding@master
-#         with:
-#           dingToken: b67048d462809d36c23a6a87332a9ab59dc8a3ffbd2c63e69caa218d7484f90d
-#           secret: SEC7f500c8f3bc47f8cc1330761aceb3c1fa45cde14e90cbb2ddcfaa1e11d499e68
-#           body: |
-#             {
-#               "msgtype": "text",
-#               "text": {
-#                   "content": '[打叉][打叉][打叉]  执行失败\n提交者: ${{ github.triggering_actor }}\n任务: ${{ github.event.pull_request.title }}\n${{ github.ref_type }}: ${{ github.head_ref }}\n${{ github.event_name }}: ${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.number }}'
-#               }
-#             }
+  dingding-error: 
+    runs-on: ubuntu-latest
+    needs: [springBoot]
+    if: ${{ failure() }}
+    steps:
+      - name: Send dingding notify error
+        uses: zcong1993/actions-ding@master
+        with:
+          dingToken: b67048d462809d36c23a6a87332a9ab59dc8a3ffbd2c63e69caa218d7484f90d
+          secret: SEC7f500c8f3bc47f8cc1330761aceb3c1fa45cde14e90cbb2ddcfaa1e11d499e68
+          body: |
+            {
+              "msgtype": "text",
+              "text": {
+                  "content": '[打叉][打叉][打叉]  执行失败\n提交者: ${{ github.triggering_actor }}\n任务: ${{ github.event.pull_request.title }}\n${{ github.ref_type }}: ${{ github.head_ref }}\n${{ github.event_name }}: ${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.number }}'
+              }
+            }
       
-#   dingding-success: 
-#     runs-on: ubuntu-latest
-#     needs: [springBoot]
-#     if: ${{ success() }}
-#     steps:
-#       - name: Send dingding notify success
-#         uses: zcong1993/actions-ding@master
-#         with:
-#           dingToken: b67048d462809d36c23a6a87332a9ab59dc8a3ffbd2c63e69caa218d7484f90d
-#           secret: SEC7f500c8f3bc47f8cc1330761aceb3c1fa45cde14e90cbb2ddcfaa1e11d499e68
-#           body: |
-#             {
-#               "msgtype": "text",
-#               "text": {
-#                   "content": '[微笑][微笑][微笑] 前台未测试 执行成功\n提交者: ${{ github.triggering_actor }}\n任务: ${{ github.event.pull_request.title }}\n${{ github.ref_type }}: ${{ github.head_ref }}\n${{ github.event_name }}: ${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.number }}'
-#               }
-#             } 
+  dingding-success: 
+    runs-on: ubuntu-latest
+    needs: [springBoot]
+    if: ${{ success() }}
+    steps:
+      - name: Send dingding notify success
+        uses: zcong1993/actions-ding@master
+        with:
+          dingToken: b67048d462809d36c23a6a87332a9ab59dc8a3ffbd2c63e69caa218d7484f90d
+          secret: SEC7f500c8f3bc47f8cc1330761aceb3c1fa45cde14e90cbb2ddcfaa1e11d499e68
+          body: |
+            {
+              "msgtype": "text",
+              "text": {
+                  "content": '[微笑][微笑][微笑] 前台未测试 执行成功\n提交者: ${{ github.triggering_actor }}\n任务: ${{ github.event.pull_request.title }}\n${{ github.ref_type }}: ${{ github.head_ref }}\n${{ github.event_name }}: ${{ github.server_url }}/${{ github.repository }}/pull/${{ github.event.number }}'
+              }
+            } 
