--- a/api/pom.xml
+++ b/api/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.yunzhi</groupId>
 	<artifactId>schedule</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>schedule</name>
 	<description>schedule system</description>
 	<properties>
