--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -10,7 +10,7 @@ spring:
       hibernate:
         dialect: "org.hibernate.dialect.MySQL57Dialect"
     hibernate:
-      ddl-auto: "create"
+      ddl-auto: "create-drop"
   flyway:
     enabled: false
     baseline-on-migrate: true
