--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -10,9 +10,9 @@ spring:
       hibernate:
         dialect: "org.hibernate.dialect.MySQL57Dialect"
     hibernate:
-      ddl-auto: "create-drop"
+      ddl-auto: "validate"
   flyway:
-    enabled: false
+    enabled: true
     baseline-on-migrate: true
 
 
